Implemented static text display control. Started using jQuery more consistently.

--- a/index.html
+++ b/index.html
@@ -208,6 +208,16 @@
         </div>
 
         <h4>Displaykontrolle</h4>
+        <p>Statischen Text senden: <input type="text" id="mouseStaticText"></p>
+        <button type="button" class="btn btn-primary" onclick="Control.sendStaticText()">Senden</button>
+        <button type="button" class="btn btn-info" onclick="Control.sendHelloWorldAnimation()">Hello World! -
+            Animation
+        </button>
+        <br><br>
+        <p>Du bist # <input type="number" id="mouseNumber">
+            <button type="button" class="btn btn-primary" onclick="Control.sendNumberText()">Senden</button>
+        </p>
+
     </div>
     <div class="col-md-3"><h2>Tastatur</h2></div>
     <div class="col-md-3"><h2>MousePad</h2></div>
